--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ permalink: pretty
 title: Nikhil Soni
 tagline: <a href="https://twitter.com/krsoninikhil">@krsoninikhil</a>
 description:
-url: http://nikhilsoni.me
+url: https://krsoninikhil.github.io
 
 author:
   name: Nikhil Soni
