--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ contact:
   instagram: https://wwww.instagram.com/krsoninikhil
 
 links:
-  source: https://github.com/krsoninikhil.github.io
+  source: https://github.com/krsoninikhil/krsoninikhil.github.io
   github: https://github.com/krsoninikhil
   resume: https://goo.gl/My8bsV
 
