--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ title: Nikhil Soni
 tagline: <a href="https://twitter.com/krsoninikhil">@krsoninikhil</a>
 description:
 url: https://krsoninikhil.github.io
+comments: true
 
 author:
   name: Nikhil Soni
