--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ links:
   source: https://github.com/krsoninikhil/krsoninikhil.github.io
   github: https://github.com/krsoninikhil
   resume: https://goo.gl/My8bsV
+  linkedin: https://www.linkedin.com/in/krsoninikhil/
 
 paginate: 5
 gems:
