Add linkedin link and fix broken image links

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ permalink: pretty
 title: Nikhil Soni
 tagline: <a href="https://twitter.com/krsoninikhil">@krsoninikhil</a>
 description:
-url: https://krsoninikhil.github.io
+url: https://nikhilsoni.me
 comments: true
 
 author:
@@ -17,7 +17,7 @@ author:
   url: https://twitter.com/krsoninikhil
 
 contact:
-  email: krsoninikhil@gmail.com
+  email: krsoninikhil@proton.me
   twitter: https://twitter.com/krsoninikhil
   angellist: https://angel.co/krsoninikhil
   aboutme: https://about.me/krsoninikhil
@@ -26,7 +26,7 @@ contact:
 links:
   source: https://github.com/krsoninikhil/krsoninikhil.github.io
   github: https://github.com/krsoninikhil
-  resume: https://goo.gl/My8bsV
+  resume: https://www.linkedin.com/in/krsoninikhil/
   linkedin: https://www.linkedin.com/in/krsoninikhil/
 
 paginate: 5
