--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ contact:
 links:
   source: https://github.com/krsoninikhil/krsoninikhil.github.io
   github: https://github.com/krsoninikhil
-  resume: https://www.linkedin.com/in/krsoninikhil/
+  resume: https://drive.google.com/file/d/13Pi79AUirEoXQXrll0zf6IXNvu6OWozI/view
   linkedin: https://www.linkedin.com/in/krsoninikhil/
 
 paginate: 5
